FEAT: Añadir a los .java JavaDoc y traducciones.